[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = ["Andrew Spott <andrew.spott@gmail.com>"]
readme = "README.md"
packages = [{include = "project_name", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
